LOW: Used proper Java API and added some more typings